app/globals.css
@import "tailwindcss";
@import "tw-animate-css";
@import "./theme.css";

@custom-variant dark (&:is(.dark *));

@layer base {
  * {
    @apply transition-colors duration-200 ease-in;
  }

  ::-webkit-scrollbar {
    @apply w-1 bg-bg-300;
  }

  ::-webkit-scrollbar-thumb,
  ::-webkit-scrollbar-thumb:hover {
    background: linear-gradient(
      180deg,
      var(--color-accent-500),
      var(--color-accent-600)
    );
  }

  textarea::-webkit-scrollbar,
  textarea::-webkit-scrollbar-thumb {
    @apply rounded-tr-xs w-2;
  }

  textarea::-webkit-scrollbar-corner {
    @apply bg-bg-300 border-none outline-none;
  }

  body {
    @apply bg-bg-100 text-fg-100;
  }

  h1,
  h2,
  h3,
  h4 {
    @apply font-medium text-fg-100 text-center;
  }

  h1 {
    @apply leading-[1.2];

    font-size: clamp(2.25rem, calc(2rem + 2vw), 3.75rem);
  }

  h2 {
    @apply leading-[1.25];

    font-size: clamp(2rem, calc(1.75rem + 1.75vw), 3.25rem);
  }

  h3 {
    @apply leading-[1.3];

    font-size: clamp(1.75rem, calc(1.5rem + 1.5vw), 2.75rem);
  }

  h4 {
    @apply leading-[1.35];

    font-size: clamp(1.5rem, calc(1.25rem + 1.25vw), 2.25rem);
  }

  h5 {
    @apply leading-[1.4];

    font-size: clamp(1.25rem, calc(1rem + 1vw), 1.75rem);
  }

  h6 {
    @apply leading-[1.45];

    font-size: clamp(1.125rem, calc(0.875rem + 0.75vw), 1.5rem);
  }

  a {
    @apply font-light text-blue-500/90 hover:text-blue-500;
    @apply underline-offset-4 hover:underline hover:decoration-1;
  }

  p,
  ul,
  ol,
  li,
  blockquote {
    @apply text-fg-100 font-light;
    @apply mt-0 mb-4;
  }

  span {
    @apply text-fg-100 font-light;
  }

  button,
  [role="button"],
  [data-slot="button"],
  [data-slot="select-item"] {
    @apply cursor-pointer;
  }

  input[type="number"]::-webkit-outer-spin-button,
  input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[type="number"] {
    -moz-appearance: textfield;
  }

  input[type="number"] {
    appearance: none;
  }

  /* Forms */

  [contenteditable][data-placeholder]:empty::before {
    @apply text-fg-500 pointer-events-none block;
    content: attr(data-placeholder);
  }
}

:root {
  --sidebar: hsl(0 0% 98%);

  --sidebar-foreground: hsl(240 5.3% 26.1%);

  --sidebar-primary: hsl(240 5.9% 10%);

  --sidebar-primary-foreground: hsl(0 0% 98%);

  --sidebar-accent: hsl(240 4.8% 95.9%);

  --sidebar-accent-foreground: hsl(240 5.9% 10%);

  --sidebar-border: hsl(220 13% 91%);

  --sidebar-ring: hsl(217.2 91.2% 59.8%);
}

.dark {
  --sidebar: hsl(240 5.9% 10%);

  --sidebar-foreground: hsl(240 4.8% 95.9%);

  --sidebar-primary: hsl(224.3 76.3% 48%);

  --sidebar-primary-foreground: hsl(0 0% 100%);

  --sidebar-accent: hsl(240 3.7% 15.9%);

  --sidebar-accent-foreground: hsl(240 4.8% 95.9%);

  --sidebar-border: hsl(240 3.7% 15.9%);

  --sidebar-ring: hsl(217.2 91.2% 59.8%);
}

@theme inline {
  --color-sidebar: var(--sidebar);

  --color-sidebar-foreground: var(--sidebar-foreground);

  --color-sidebar-primary: var(--sidebar-primary);

  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);

  --color-sidebar-accent: var(--sidebar-accent);

  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);

  --color-sidebar-border: var(--sidebar-border);

  --color-sidebar-ring: var(--sidebar-ring);
}

@layer base {
  * {
    @apply border-bg-300 outline-ring/50;
  }
  body {
    @apply bg-bg-100 text-fg-100;
  }
}

